<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/accent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.auth.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/app_name"
            android:textSize="60sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_jargon"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:src="@drawable/registrasi"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            app:cardCornerRadius="12dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/primary"
                    android:paddingLeft="25dp"/>

                <EditText
                    android:id="@id/edtEmail"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textColor="@color/primary"
                    android:paddingLeft="25dp"/>

                <EditText
                    android:id="@id/edtPassword"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:inputType="textPassword"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nama"
                    android:textColor="@color/primary"
                    android:paddingLeft="25dp"/>

                <EditText
                    android:id="@+id/edtNama"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="No Handphone"
                    android:textColor="@color/primary"
                    android:paddingLeft="25dp"/>

                <EditText
                    android:id="@+id/edtNo"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jenis Kelamin"
                    android:textColor="@color/primary"
                    android:paddingLeft="25dp"/>
                <RadioGroup
                    android:id="@+id/rgJenisKelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    >

                    <RadioButton
                        android:id="@+id/rbLakiLaki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Laki - Laki"
                        android:textColor="@color/primary"
                        />

                    <RadioButton
                        android:id="@+id/rbPerempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="Perempuan"
                        android:textColor="@color/primary"
                        />
                </RadioGroup>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/register" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>