<resources>
    <string name="app_name">ServiceKu</string>
    <string name="app_jargon">"Kamu Senang Kami senang"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="admin">admin</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="id_service">Id Service:</string>
    <string name="no_plat">No Plat:</string>
    <string name="tanggal_service">Tanggal Service:</string>
    <string name="nama">Nama:</string>
    <string name="keluhan">Keluhan:</string>
    <string name="no_hp">No Hp:</string>
    <string name="status">Status:</string>
    <string name="total_harga">Total Harga:</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="update">Update</string>
    <string name="selesai_service">Selesai</string>
    <string name="sedang_diservis">Sedang diservis</string>
    <string name="belum_diservis">Belum diservis</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZ2dnaW1hbmciLCJhIjoiY2t1ano2c2xuMWtxNjJucnViMjd3M2U4NCJ9.q29ejSty3qj3ZyxeuMvlBA</string>
    <string name="user_location_permission_explanation">Apakah diperbolehkan?</string>
    <string name="user_location_permission_not_granted">Ditolak</string>
    <string name="menu_service">Service</string>
    <string name="menu_inventory">Inventory</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main23">MainActivity23</string>
    <string name="menu_profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>